--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,18 @@
-# Use Node.js LTS image
+# Start from official Node.js 18 image
 FROM node:18
 
-# Set working directory
+# Create app directory inside container
 WORKDIR /app
 
-# Copy package.json and install dependencies
+# Copy package.json first to install dependencies
 COPY package.json ./
 RUN npm install
 
-# Copy rest of the code
+# Copy rest of the app files
 COPY . .
 
 # Expose port 5000
 EXPOSE 5000
 
-# Start the app
+# Start the app using serve
 CMD ["node", "server.js"]
